[project]
name = "hsvremapcon"
version = "0.0.1"
authors = [
  { name="JJD Hooghiem", email="joramjd@example.com" },
]
description = "Vertical remapping of atmospheric tracers between different vertical level systems"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: " ,  
    "Operating System :: OS Independent",
]

[project.urls]
# "Homepage" = "https://github.com/pypa/sampleproject"
# "Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

